--- a/Final Report/Final-Report.Rmd
+++ b/Final Report/Final-Report.Rmd
@@ -27,7 +27,7 @@ Talk about how we plotted for Train and Validate data for all of the models. Spl
 
 # Dan's Stuff
 
-
+# Chris' Stuff
 
 ```{r, cache=TRUE, include=FALSE}
 # Import ATUS Summary file
